fixed nav spacing

--- a/src/modules/companies/components/CompanySearchNav/CompanySearchNav.module.scss
+++ b/src/modules/companies/components/CompanySearchNav/CompanySearchNav.module.scss
@@ -5,7 +5,6 @@
   height: calc(100vh - $navbar-height - $company-search-header-height);
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   min-height: 600px;
 }
 
